--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -444,4 +444,16 @@
   <data name="title_tara_uz" xml:space="preserve">
     <value>Тара (УЗ),т</value>
   </data>
+  <data name="internal_description" xml:space="preserve">
+    <value>Номерной учет вагонов, на территории предприятия.</value>
+  </data>
+  <data name="internal_title" xml:space="preserve">
+    <value>АРМ диспетчера</value>
+  </data>
+  <data name="outgoing_description" xml:space="preserve">
+    <value>Номерной учет вагонов, отправляемых из АМКР на внешнюю сеть (УЗ)</value>
+  </data>
+  <data name="outgoing_title" xml:space="preserve">
+    <value>Отправить на УЗ</value>
+  </data>
 </root>
