--- a/WEB_UI/App_LocalResources/GlobalResource.en.resx
+++ b/WEB_UI/App_LocalResources/GlobalResource.en.resx
@@ -172,7 +172,7 @@
     <value>IDS "MORS"</value>
   </data>
   <data name="system_rail_transport_description" xml:space="preserve">
-    <value>AMKR railway transport - an internal dispatching system for the operational management of the transportation process in railway transport within the enterprise "ARSELORMITTAL CURVE HORN"</value>
+    <value>AMKR railway transport - an internal dispatching system for the operational management of the transportation process in railway transport within the enterprise "ARSELORMITTAL KRIVOY ROG"</value>
   </data>
   <data name="system_rail_transport_title" xml:space="preserve">
     <value>GVA "Railway AMKR"</value>
