add dir Directory_Reason_Discrepancy deverlop form Outgoing add visual componet + list

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -627,4 +627,7 @@
   <data name="title_ves_tary_uz" xml:space="preserve">
     <value>Вес тары</value>
   </data>
+  <data name="title_loading_devision_code" xml:space="preserve">
+    <value>Шифр</value>
+  </data>
 </root>
